# FIBONACCI_LAB

./: .env  .env.production  .gitattributes  .gitignore  .replit  Dockerfile  ECOSISTEMA.md  FIBONACCI_LAB.code-workspace  README.md  auditoria.py  crear_frontend.sh  dr-de-  package-lock.json  package.json  politica_privacidad.md  pyproject.toml  setup_fastapi_space.sh  subida_segura.sh  tailwind.config.ts  terminos_y_licencia.md  vite.config.ts
app/: main.py
backend/: pyproject.toml
backend/app/: main.py
client/src/: App.tsx
client/src/lib/: websocket.ts
client/src/pages/: auth-page.tsx  chat-page.tsx  home-page.tsx
fibonacci/: README.md
fibonacci/projects/fibonacci-contracts/: README.md
fibonacci/projects/fibonacci-frontend/: .algokit.toml  README.md  (+1 more)
fibonacci_backup/: .algokit.toml  fibonacci.code-workspace
fibonacci_backup/.algokit/: .copier-answers.yml
frontend/: index.html  package.json  script.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/frontend/: package-lock.json  package.json
frontend/src/: App.tsx
hero-section-ia/: package-lock.json  package.json
my-multimodal-app/: package-lock.json  package.json
server/: auth.ts  openai.ts  routes.ts  storage.ts  vite.ts  websocket.ts
shared/: schema.ts
src/: App.tsx
src/app/: layout.tsx
src/components/: AnalyticsComponent.tsx  Hero.tsx  HeroSection.css  HeroSection.tsx
src/styles/: # Code Citations.md  Hero.css  Untitled-1.md  index.css
vercel_hooks/: ejecutar_verificacion.sh  index.html  package-lock.json  package.json  styles.css  verifySignature.js
(+11 files in other folders)
