[tool.poetry]
name = "fibonacci-lab"
version = "0.1.0"
description = "Aplicación multimodal con Vite y FastAPI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^24.3.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"